landing image distortion fix

--- a/webapp/client/src/styles/style.css
+++ b/webapp/client/src/styles/style.css
@@ -6,6 +6,8 @@
 html, body {
   position: fixed;
   overflow: hidden;
+  width: 100vw;
+  height: 100vh;
 }
 
 #game_screen_page_body {
